src/app/app.component.scss
$font-main: 'Montserrat', sans-serif;
$font-secondary: 'Istok Web', sans-serif;
$cream: rgb(248, 243, 242);
$peach-extralight: rgb(248, 220, 220);
$peach-light: rgb(244, 209, 204);
// $peach-dark: rgb(244, 186, 180);
$peach-dark: rgb(243, 177, 171);
$blue-light: rgb(154, 219, 229);
$blue-medium: rgb(65, 179, 197);
$indigo-dark: rgb(26, 44, 139);
// rgb(244, 205, 206)
$width-left: 14.5rem;
$width-right-max: 30.85rem;
$margin-left: 1.85rem;
$content-maxwidth: 47.2rem;
$title-height: 5rem;
$section-container-padding: 0 1.75rem 2.5rem 1.75rem;

.site {    
    height: 100%;
    min-width: 100%;
    &__container {
        // max-width: $content-maxwidth;
        height: 100%;
        width: 100%;
        position: relative;
        // z-index: -10;
    }
}

.title {
    
    height: 8rem;
    color: $indigo-dark;
    position: relative;
    // z-index: -2;
    &__container {
        height: 100%;
        max-width: $content-maxwidth;
        padding: 1.25rem 1.75rem 1.25rem 1.75rem;
        margin: auto;
        // position: absolute;
        top: 0;
        // z-index: 100;
    }

    &__text {
        float: left;
        width: 17.35rem;
        // text-shadow: 0 0px 1px rgba(26, 44, 80, .git 5);

        &-name {
            font-family: $font-main;
            font-weight: 900;
            font-size: 1.7rem;
            text-align: left;
            margin: 0;
            
        }
        
        &-container {
            font-family: $font-secondary;
            margin-top: .35rem;
        }

        &-jobtitle {
            text-align: left;
            font-weight: 700;
            font-size: 1.35rem;
            line-height: 1.65rem;
            margin: 0;
        }
    }
}

.header {
    width: 100%;
    height: 2.5rem;
    box-sizing: border-box;
    padding: 0 1.75rem 0 1.75rem;
    box-sizing: border-box;
    background-color: $indigo-dark;
    z-index: 10;

    &__container {
        max-width: $content-maxwidth;
        margin: auto;
        display: flex;
        align-items: center;
        justify-content: space-between;
        flex-wrap: wrap;
        height: 100%;
        color: $cream;
        &-left {
            display: flex;
            align-items: center;
            // flex-wrap: wrap;
            width: $width-left;
            
        }

        &-right {
            width: $width-left;
            display: flex;
            // align-items: center;
            justify-content: flex-end;
            height: 100%;
            // background-color: teal;
        }
    }

    &__name {
        font-family: $font-main;
        font-weight: 700;
        font-size: .85rem;
    }

    &__icon {
        padding: .25rem;
        display: flex;
        justify-content: center;
        align-items: center;
        width: 24px;
        height: 24px;
        &-container {
            min-width: 6rem;
            
            margin-left: .15rem;
            display: flex;
            justify-content: space-evenly;
            align-items: center;
        }
        &-fill {
            transition: all .3s;
            fill: $cream;
        }

        &-stroke {
            transition: all .3s;
            stroke: $cream;
        }
        &-ref {
            
            &:hover {
                .header__icon {
                    &-fill {
                        fill: $blue-light;
                    }
                    &-stroke {
                        stroke: $blue-light;
                    }
                }
            }
            &:focus {
                .header__icon {
                    &-fill {
                        fill: $blue-light;
                    }
                    &-stroke {
                        stroke: $blue-light;
                    }
                }
            }
        }
        
    }
    &__section {
        

        &-ref {
            font-family: $font-main;
            font-weight: 600;
            font-size: .75rem;
            color: $cream;
            text-decoration: none;
            padding: .25rem;
            cursor: pointer;
            transition: all .3s;
            margin: .25rem 0;

            &:hover {
                color: $blue-light;
            }
            &:focus {
                color: $blue-light;
            }
        }
        
        &-container {
            width: 13rem;
            height: 100%;
            display: flex;
            justify-content: space-between;
            align-items: center;
            // background-color: pink;

        }
    }
}

.main {
    width: 100%;
    height: 100%;
    
    z-index: 10;
    position: relative;
}
/* ... */

